--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-  "semi": true,
-  "arrowParens": "always",
-  "singleQuote": true,
+  "endOfLine": "lf",
+  "semi": false,
+  "singleQuote": false,
+  "tabWidth": 2,
   "trailingComma": "es5"
 }
