--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-styled-components": "^3.1.19",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
