--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.7",
     "gatsby": "^2.19.7",
+    "gatsby-plugin-netlify-cms": "^4.1.39",
     "gatsby-plugin-no-javascript": "^2.0.5",
     "gatsby-plugin-styled-components": "^3.1.19",
+    "netlify-cms-app": "^2.11.17",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "styled-components": "^5.0.1"
