--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,16 +6,11 @@ media_folder: "static/images/uploads"
 # The src attribute for uploaded media will begin with /images/uploads
 public_folder: "/images/uploads"
 
-collections:
-- name: "blog" # Used in routes, e.g., /admin/collections/blog
-  label: "Blog" # Used in the UI
-  folder: "_posts/blog" # The path to the folder where the documents are stored
-  create: true # Allow users to create new documents in this collection
-  slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+- name: "home" # Used in routes, e.g., /admin/collections/blog
+  label: "Home" # Used in the UI
+  folder: "_content/home" # The path to the folder where the documents are stored
+  create: false # Allow users to create new documents in this collection
+  slug: "data" # Filename template, e.g., YYYY-MM-DD-title.md
   fields: # The fields for each document, usually in front matter
-    - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
-    - {label: "Title", name: "title", widget: "string"}
-    - {label: "Publish Date", name: "date", widget: "datetime"}
-    - {label: "Featured Image", name: "thumbnail", widget: "image"}
-    - {label: "Rating (scale of 1-5)", name: "rating", widget: "number"}
-    - {label: "Body", name: "body", widget: "markdown"}
+    - {label: "Heading", name: "heading", widget: "string"}
+    - {label: "subheading", name: "heading", widget: "string"}
