--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,11 +6,29 @@ media_folder: "static/images/uploads"
 # The src attribute for uploaded media will begin with /images/uploads
 public_folder: "/images/uploads"
 
-- name: "home" # Used in routes, e.g., /admin/collections/blog
-  label: "Home" # Used in the UI
-  folder: "_content/home" # The path to the folder where the documents are stored
-  create: false # Allow users to create new documents in this collection
-  slug: "data" # Filename template, e.g., YYYY-MM-DD-title.md
-  fields: # The fields for each document, usually in front matter
-    - {label: "Heading", name: "heading", widget: "string"}
-    - {label: "subheading", name: "heading", widget: "string"}
+
+collections:
+  - name: "home" # Used in routes, e.g., /admin/collections/blog
+    editor:
+      preview: false
+    label: "Home" # Used in the UI
+    folder: "_content/home" # The path to the folder where the documents are stored
+    format: "json"
+    create: false # Allow users to create new documents in this collection
+    slug: "data" # Filename template, e.g., YYYY-MM-DD-title.md
+    fields: # The fields for each document, usually in front matter
+      - {label: "Heading", name: "heading", widget: "string"}
+      - {label: "subheading", name: "subheading", widget: "string"}
+      - label: "Links"
+        name: "links"
+        widget: "list"
+        fields:
+          - label: Text
+            name: text
+            widget: string
+          - label: Icon
+            name: icon
+            widget: image
+          - label: Link
+            name: link
+            widget: string
