--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "postcss": "^8.2.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-icons": "^4.1.0",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
     "husky": "^4.3.8",
-    "pretty-quick": "^3.1.0"
+    "prettier": "2.2.1",
+    "pretty-quick": "^3.1.0",
+    "typescript": "^4.1.3"
   },
   "husky": {
     "hooks": {
