--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "autoprefixer": "^10.2.3",
-    "next": "10.0.5",
-    "postcss": "^8.2.4",
+    "next": "^10.2.0",
+    "postcss": "^8.2.15",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
