--- a/package.json
+++ b/package.json
@@ -1,32 +1,14 @@
 {
-  "name": "website",
-  "version": "0.1.0",
+  "name": "nathanielgreen",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start"
-  },
-  "dependencies": {
-    "autoprefixer": "^10.2.3",
-    "next": "^10.2.0",
-    "postcss": "^8.2.15",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-icons": "^4.1.0",
-    "tailwindcss": "^2.0.2"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22",
-    "@types/react": "^17.0.0",
-    "husky": "^4.3.8",
-    "prettier": "2.2.1",
-    "pretty-quick": "^3.1.0",
-    "typescript": "^4.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged"
-    }
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
